# french-coref-conll

./: .gitignore  LICENSE  README.md  convert_ancor_to_corefud.sh  convert_parcorfull_to_corefud.sh  pyproject.toml
src/: ancor2conll.py  ancor_patch.py  ancor_utils.py  mmax2conll.py  split_conll.py
